--- a/README.adoc
+++ b/README.adoc
@@ -30,6 +30,8 @@ java -jar text-word-counter-1.0-SNAPSHOT.jar --min=5 --max=10 --files text1.txt 
 
 --max=10 - максимальный размер слова для анализа
 
+--threads=5 - число потоков для анализа слов
+
 --files text1.txt text2.txt data text* - этот параметр обязательный. Он должен указывается последним в списке параметров, и все последующие значения параметров ассоциируются как его множественные значения. В качестве значений можно указывать как файлы, так и папки, и если ваш командный интерпретатор преобразует указанные маски в конечные имена файлов, то можно указывать и маски файлов при запуске. Обратите внимание, что будет производиться обработка только файлов с расширением `.txt`. Если в качестве парамера указана папка, то будут найдены и обработаны все файлы с расширением `.txt` рекурсивно.
 
 == Особенности
