--- a/README.adoc
+++ b/README.adoc
@@ -36,5 +36,5 @@ java -jar text-word-counter-1.0-SNAPSHOT.jar --min=5 --max=10 --threads=5 --file
 
 == Особенности
 
-Программа обрабатывает текстовые файлы в кодировке uncode. При разборе текста предполагается что любая строка содержит слова целиком, то есть в тексте нет переносов слов с одной строки на другую. Слова выделяются из текста на основании правил: слово начинается и заканчивается буквой, внутри себя слово между буквами может содержать разделительный символ `-`. Таким образом, например воспринимаются как целые слова: `по-русски`, `по-пожаски`, `только-только`, `когда-нибудь`. Если же символ `-` встречается в начале или конце слова, то этот символ на слово не будет влиять, и будет восприниматься как разделительный.
+Программа обрабатывает текстовые файлы в кодировке unicode. При разборе текста предполагается что любая строка содержит слова целиком, то есть в тексте нет переносов слов с одной строки на другую. Слова выделяются из текста на основании правил: слово начинается и заканчивается буквой, внутри себя слово между буквами может содержать разделительный символ `-`. Таким образом, например воспринимаются как целые слова: `по-русски`, `по-пожаски`, `только-только`, `когда-нибудь`. Если же символ `-` встречается в начале или конце слова, то этот символ на слово не будет влиять, и будет восприниматься как разделительный.
 
