добавил обработку дефисов И обработку наличия символов "-" идущих друг за другом

--- a/README.adoc
+++ b/README.adoc
@@ -21,7 +21,7 @@ gradle clean doReadyRun
 
 [source,bash]
 ----
-java -jar text-word-counter-1.0-SNAPSHOT.jar --min=5 --max=10 --threads=5 --files text1.txt text2.txt data
+java -jar text-word-counter-1.0-SNAPSHOT.jar --min=5 --max=10 --threads=5 --duration=true --files text1.txt text2.txt data
 ----
 
 Описание параметров:
@@ -32,9 +32,15 @@ java -jar text-word-counter-1.0-SNAPSHOT.jar --min=5 --max=10 --threads=5 --file
 
 --threads=5 - число потоков для анализа слов
 
+--duration=true - булевый флаг, определяющий отображение затраченного времени.
+Для `duration=true`, нужно использовать значения, которые однозначно можно соотнести со значением `true`: [`true`, `t`, `yes`, `y`, `1`] (в любом регистре), иначе значение будет определено как `false`.
+
 --files text1.txt text2.txt data text* - этот параметр обязательный. Он должен указывается последним в списке параметров, и все последующие значения параметров ассоциируются как его множественные значения. В качестве значений можно указывать как файлы, так и папки, и если ваш командный интерпретатор преобразует указанные маски в конечные имена файлов, то можно указывать и маски файлов при запуске. Обратите внимание, что будет производиться обработка только файлов с расширением `.txt`. Если в качестве парамера указана папка, то будут найдены и обработаны все файлы с расширением `.txt` рекурсивно.
 
 == Особенности
 
-Программа обрабатывает текстовые файлы в кодировке unicode. При разборе текста предполагается что любая строка содержит слова целиком, то есть в тексте нет переносов слов с одной строки на другую. Слова выделяются из текста на основании правил: слово начинается и заканчивается буквой, внутри себя слово между буквами может содержать разделительный символ `-`. Таким образом, например воспринимаются как целые слова: `по-русски`, `по-пожаски`, `только-только`, `когда-нибудь`. Если же символ `-` встречается в начале или конце слова, то этот символ на слово не будет влиять, и будет восприниматься как разделительный.
-
+Программа обрабатывает текстовые файлы в кодировке unicode.
+При разборе текста предполагается что любая строка содержит слова целиком, то есть в тексте нет переносов слов с одной строки на другую.
+Слова выделяются из текста на основании правил: слово начинается и заканчивается буквой, внутри себя слово между буквами может содержать символ `-` (минус) или `—` (дефис).
+Таким образом, например воспринимаются как целые слова: `по-русски`, `по-пожаски`, `только-только`, `когда-нибудь`.
+Если же символ `-`/`—` встречается в начале или конце слова, встречается несколько раз подряд, то этот символ на слово не будет влиять, и будет восприниматься как разделительный.
