расширил отображение статистики

--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-# word-counter
+= word-counter
 
 
 Приложение предназначено для анализа множества текстовых файлов, и выдачи списка 10 самых
@@ -21,7 +21,7 @@ gradle clean doReadyRun
 
 [source,bash]
 ----
-java -jar text-word-counter-1.0-SNAPSHOT.jar --min=5 --max=10 --threads=5 --duration=true --files text1.txt text2.txt data
+java -jar text-word-counter-1.0-SNAPSHOT.jar --min=5 --max=10 --threads=5 --stats=true --files text1.txt text2.txt data
 ----
 
 Описание параметров:
@@ -32,8 +32,8 @@ java -jar text-word-counter-1.0-SNAPSHOT.jar --min=5 --max=10 --threads=5 --dura
 
 --threads=5 - число потоков для анализа слов
 
---duration=true - булевый флаг, определяющий отображение затраченного времени.
-Для `duration=true`, нужно использовать значения, которые однозначно можно соотнести со значением `true`: [`true`, `t`, `yes`, `y`, `1`] (в любом регистре), иначе значение будет определено как `false`.
+--stats=true - булевый флаг, определяющий отображение статистики (затраченного времени и общего количества слов).
+Для `duration=true`, нужно использовать значения, которые можно однозначно соотнести со значением `true`: [`true`, `t`, `yes`, `y`, `1`] (в любом регистре), иначе значение будет определено как `false`.
 
 --files text1.txt text2.txt data text* - этот параметр обязательный. Он должен указывается последним в списке параметров, и все последующие значения параметров ассоциируются как его множественные значения. В качестве значений можно указывать как файлы, так и папки, и если ваш командный интерпретатор преобразует указанные маски в конечные имена файлов, то можно указывать и маски файлов при запуске. Обратите внимание, что будет производиться обработка только файлов с расширением `.txt`. Если в качестве парамера указана папка, то будут найдены и обработаны все файлы с расширением `.txt` рекурсивно.
 
